# flou

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  LICENSE  README.md  compose.dev.yml  compose.yml  docker-entrypoint.sh  docs.Dockerfile  flou.Dockerfile  index.html  sitemap.xml  studio.Dockerfile
.github/workflows/: docs.yml  test.yml
docs/: .markdownlint.json  README.md  mkdocs.yml  requirements.txt  user-requirements.txt
docs/docs/: index.md
documentation/: index.html
documentation/changelog/: index.html
documentation/contributing/: index.html
documentation/engine/: index.html
documentation/network/: index.html
documentation/quicksheet/: index.html
documentation/studio/: index.html
examples/tutorial/: app.py  part1.py  part2.py
flou/: .gitignore  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
flou/docker/: compose.yml
flou/flou/: cli.py  ltm.py
flou/flou/api/: main.py  router.py
flou/flou/database/: __init__.py  base.py
flou/flou/engine/: router.py  schemas.py
flou/flou/experiments/: models.py  router.py  schemas.py
flou/migrations/: env.py
flou/migrations/versions/: 2024_11_04_2001-d17bb320f4d3_.py  2024_11_06_1430-69c9354bb7ff_.py  2024_11_06_1432-076b9aea5f59_.py
getting-started/: index.html
getting-started/studio/: index.html
search/: search_index.json
studio/: .env  .gitignore  package-lock.json  package.json  vite.config.ts
tests/: conftest.py  pytest.ini  test_api.py  test_db.py  test_ltm.py  test_namespaces.py  test_registry.py  test_sqlite3.py  utils.py
tutorial/: index.html
(+93 files in other folders)
